# column-engine

./: .clang-format  CMakeLists.txt  Dockerfile  README.md  a.cpp  a.h
.cache/clangd/index/: a.cpp.DFE39C76572C7992.idx  a.h.D5FD63141ED1D862.idx  main.cpp.366EFBECE5A72B2B.idx
Engine/: CMakeLists.txt  ClickBenchConvert.cpp  ClickBenchQ1.cpp  ClickBenchRunner.cpp
Engine/Execution/: Executor.cpp  Executor.h  Filter.h  Queries.h  Scan.h
Engine/Functions/: Aggregation.cpp  Aggregation.h  Agregation.h  Expression.h  Filter.h  Functions.h  TopK.cpp  TopK.h
Engine/Helpers/: AggrBuilder.cpp  AggrBuilder.h  ExprHelper.cpp  ExprHelper.h  Helpers.h  PlanBuilder.h
Engine/Operators/: AggrOperators.h  BasicOperators.h  ScalarOperators.cpp  ScalarOperators.h
Engine/Planer/: Base.h
Engine/Tests/: test_engine.cpp
FileBasicTools/: CMakeLists.txt
FileBasicTools/.cache/clangd/index/: BaseReader.cpp.5D64987B94EAB491.idx  BaseReader.h.6253F78A8198A5A0.idx  Batch.cpp.574FD98772D318E2.idx  Batch.h.8913FF9BBEEDC1ED.idx  BelZConvertor.cpp.BCB5FAB601B29D8B.idx  BelZConvertor.h.3A0FCCCB49036B4D.idx  BelZReader.cpp.BFEDB0DC28722002.idx  BelZReader.h.88B8D7745FAB357D.idx  BelZWriter.cpp.7C5687F76A39920E.idx  BelZWriter.h.951A0B6725A58919.idx  CSVConvertor.cpp.6C755CD4413DB0C6.idx  CSVConvertor.h.796A90F0C7AAAF9E.idx  CSVReader.cpp.11D8BEB4AD59E72B.idx  CSVReader.h.548307D2026028E2.idx  CSVWriter.cpp.02FD5B440471549C.idx  CSVWriter.h.20FDE47D53C47C49.idx  Column.h.57FE1803EFE451FC.idx  MetaData.cpp.C7706300F82683CF.idx  MetaData.h.6F8991BB1E332E9E.idx  Row.cpp.71505896E6AD7B7B.idx  Row.h.A62C5AE11EA78931.idx  Scheme.cpp.E1B2B5BF572C0CEC.idx  Scheme.h.FF5856503AEE590D.idx  bench.cpp.EC590DA186208504.idx  column.cpp.9A7856F5B0072324.idx  file_tools.cpp.6D9D0393DDE9C6D6.idx  file_tools.h.0B52A2E5D1DE3B63.idx  row.cpp.89FB5B5297D7031A.idx  row.h.6B0A038716D21D51.idx  scheme_reader.cpp.4F94FD0D74FEEE98.idx  scheme_reader.h.416FEA503A9E4344.idx  sheme.cpp.6FDF3C5C56083583.idx  test_BelZConvertor.cpp.25C5B79DBB9FC076.idx  test_BelZConvertorAdvanced.cpp.831C36FF40B70F97.idx  test_BelZReader.cpp.2B2876D27625ABA4.idx  test_BelZWriter.cpp.47FEE6926E9E58BC.idx  test_CSVConvertor.cpp.447705171257605E.idx  test_CSVReader.cpp.6FF1BC4C22121227.idx  test_CSVWriter.cpp.223DEDB56D8DC5BB.idx  test_batch.cpp.AF7DAB2DDEC035D5.idx  (+5 more)
FileBasicTools/DataStructures/: Batch.cpp  Batch.h  Column.h  Data.h  GermanString.cpp  GermanString.h  MetaData.cpp  MetaData.h  Row.cpp  Row.h  Scheme.cpp  Scheme.h  Types.h  Utility.h  column.h  row.cpp  row.h
FileBasicTools/DataStructures/Tests/: Attention.md  test_batch.cpp  test_column.cpp  test_metadata.cpp  test_row.cpp  test_scheme.cpp
FileBasicTools/DataStuctures/: column.h  row.cpp  row.h
FileBasicTools/build_release/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json  test_bench  test_data_structures  test_src
FileBasicTools/build_release/Testing/Temporary/: CTestCostData.txt
FileBasicTools/src/: BaseReader.cpp  BaseReader.h  BatchReader.h  BelZConvertor.cpp  BelZConvertor.h  BelZReader.cpp  BelZReader.h  BelZWriter.cpp  BelZWriter.h  BelZonvertor.cpp  CSVConvertor.cpp  CSVConvertor.h  CSVReader.cpp  CSVReader.h  CSVWriter.cpp  CSVWriter.h  Coder.cpp  Coder.h  CsvConvertor.cpp  CsvConvertor.h  CsvReader.cpp  CsvReader.h  CsvWriter.cpp  CsvWriter.h  Decoder.h  datum.h  file_tools.cpp  file_tools.h  scheme.cpp  scheme.h  scheme_reader.cpp  scheme_reader.h  sheme.h
FileBasicTools/src/Tests/: bench.cpp  scan_bench.cpp  test_BelZConvertor.cpp  test_BelZConvertorAdvanced.cpp  test_BelZReader.cpp  test_BelZWriter.cpp  test_CSVConvertor.cpp  test_CSVReader.cpp  test_CSVWriter.cpp  test_HitsRoundTrip.cpp
FileBasicTools/tests/: 0.csv  1.csv  2.csv  test_file_tools.cpp
cmake/: ClangFormat.cmake
script/: build.sh  convert.sh  run_query.sh  setup.sh
